# mbs

./: .gitignore  CMakeLists.txt  README.md  USAGE.md  mbs-cmake.cmake  mbs.yml
modules/libmbs/include/: MbsProject.h
modules/libmbs/include/mbs/: ApplicationModule.h  LibraryModule.h  MbsException.h  MbsProject.h  Module.h
modules/libmbs/source/: ApplicationModule.cpp  LibraryModule.cpp  MbsProject.cpp  Module.cpp
modules/mbs/source/: main.cpp
